@@ -97,7 +97,7 @@ def cmp_to_key(mycmp):
     """Convert a cmp= function into a key= function"""
     class K(object):
         __slots__ = ['obj']
-        def __init__(self, obj, *args):
+        def __init__(self, obj):
             self.obj = obj
         def __lt__(self, other):
             return mycmp(self.obj, other.obj) < 0
@@ -114,6 +114,11 @@ def cmp_to_key(mycmp):
         def __hash__(self):
             raise TypeError('hash not implemented')
     return K
+
+try:
+    from _functools import cmp_to_key
+except ImportError:
+    pass
 
 _CacheInfo = namedtuple("CacheInfo", "hits misses maxsize currsize")
 
